2007-01-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/main.ccg: Destructor: Call the cleanup functions, instead of calling 
	init again. This seems to be a copy/paste error from April 2003. 
	Bug #383340 from Christopher Raine.

2.8.10:

2006-11-24  Johannes Schmid <johannes.schmid@openismus.com>

	* gtk/src/uimanager.ccg:
	Fixed a crasher in error handling when exceptions are disabled 

2006-11-21  Rémi Cardona  <remi2402@free.fr>

	* configure.in:
	* gtk/gtkmm-2.4.pc.in: Define a GTKMM_PC_ATKMM_DEP conditional and 
	use it so that atkmm is only required when it is built, and not 
	when disabled via --enable-api-atkmm=no.
	Bug #366930 from John N. Laliberte.

2006-11-14  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* gtk/gtkmmconfig.h.in:
	* scripts/reduced.m4: Added --enable-api-maemo-extensions 
	configure option, default to false, defining the 
	GTKMM_MAEMO_EXTENSIONS_ENABLED macro.
	* gtk/src/textbuffer.hg:
	* gtk/src/textbuffer.ccg: Put the Maemo-specific API in 
	ifdefs, using the optional _WRAP_METHOD() parameter.

2.8.9:

2006-09-19  Johannes Schmid <jhs@gnome.org>

	* scripts/reduced.m4: Added GTKMM_ARG_ENABLE_API_ATKMM() to 
	add the --enable-api-atkmm configure option.
	* configure.in: Use GTKMM_ARG_ENABLE_API_ATKMM, and optionally 
	use the atkmm subdirectory (and its children).
	* gtk/gtkmmconfig.h.in: undef GTKMM_ATKMM_ENABLED so that 
	it will be defined (or not) in gtkmmconfig.h.
	* Makefile.am: Optinally build in the atkmm directory..
	* demos/Makefile.am:
	* demos/gtk-demo/Makefile.am:
	* examples/Makefile.am_fragment:
	* tests/Makefile.am_fragment: 
	* gtk/gtkmm/Makefile.am: Make linking and including of 
	atkmm optional.
	* gtk/src/main.ccg: Only call Atk::wrap_init() if atkmm is enabled.
	* gtk/src/widget.hg: Only derive from (and implement) 
	Atk::Implementor if atkmm is enabled.
	get_accessible():
	* gtk/src/combobox.hg: get_popup_accessible():
	Use the extra ifdef GTKMM_ATKMM_ENABLED option to put ifdefs around this 